<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <Space
            android:id="@+id/topSpacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topSpacer">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_logo"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="32sp"
                android:fontFamily="@font/poppins_bold"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/welcomeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:id="@+id/tvWelcomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textSize="40sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tvWelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_subtitle"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:layout_marginBottom="48dp"/>


            <LinearLayout
                android:id="@+id/buttonContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    app:cornerRadius="32dp"
                    style="@style/Widget.DormHunt.Button"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="32dp"
                    android:text="@string/register"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    app:cornerRadius="32dp"
                    style="@style/Widget.DormHunt.Button.Outlined"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>